ihear/base/auth.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  selector:
    matchLabels:
      run: auth
  replicas: 1
  template:
    metadata:
      labels:
        run: auth
    spec:
      containers:
        - name: auth
          image: ashraf1abdelrasool/auth:0.0.1-SNAPSHOT
          ports:
            - containerPort: 9999
---
apiVersion: v1
kind: Service
metadata:
  name: auth
  labels:
    run: auth
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9999
  type: ClusterIP
  selector:
    run: auth
