ihear/base/livepoll.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: livepoll
spec:
  selector:
    matchLabels:
      run: livepoll
  replicas: 1
  template:
    metadata:
      labels:
        run: livepoll
    spec:
      containers:
        - name: livepoll
          image: ashraf1abdelrasool/livepoll:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8085
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: livepoll
  labels:
    run: livepoll
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8085
      targetPort: 8085
  type: LoadBalancer
  selector:
    run: livepoll
