ihear/base/pi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pi
spec:
  selector:
    matchLabels:
      run: pi
  replicas: 1
  template:
    metadata:
      labels:
        run: pi
    spec:
      containers:
        - name: pi
          image: ashraf1abdelrasool/pi:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8082
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: pi
  labels:
    run: pi
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8082
      targetPort: 8082
  type: NodePort
  selector:
    run: pi
