ihear/base/pipeline.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pipeline
spec:
  selector:
    matchLabels:
      run: pipeline
  replicas: 1
  template:
    metadata:
      labels:
        run: pipeline
    spec:
      containers:
        - name: pipeline
          image: ashraf1abdelrasool/pipeline:0.0.1-SNAPSHOT
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: pipeline
  labels:
    run: pipeline
spec:
  ports:
    - name: http
      protocol: UDP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
  sessionAffinity: ClientIP
  selector:
    run: pipeline
