ihear/base/streamer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamer
spec:
  selector:
    matchLabels:
      run: streamer
  replicas: 1
  template:
    metadata:
      labels:
        run: streamer
    spec:
      containers:
        - name: streamer
          image: ashraf1abdelrasool/streamer:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: streamer
  labels:
    run: streamer
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8083
      targetPort: 8083
  type: NodePort
  selector:
    run: streamer
