ihear/base/ws.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws
spec:
  selector:
    matchLabels:
      run: ws
  replicas: 1
  template:
    metadata:
      labels:
        run: ws
    spec:
      containers:
        - name: ws
          image: ashraf1abdelrasool/ws:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: ws
  labels:
    run: ws
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8084
      targetPort: 8084
  type: NodePort
  selector:
    run: ws
